# nagi

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-06-05-nagi-complete-design.md
packaging/linux/: nagi.desktop  nagi.service
src/: config.rs  desktop_linux.rs  desktop_windows.rs  gui.rs  lib.rs  main.rs  monitor.rs  player.rs  streaming.rs  tray.rs  window_detect_linux.rs  window_detect_windows.rs
wix/: .gitignore  main.wxs
