[package]
name = "nagi"
version = "0.1.0"
edition = "2021"
description = "Lightning-fast video wallpaper daemon. Rust rewrite of hidamari."

[[bin]]
name = "nagi"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mpv = { version = "0.2", optional = true }
x11rb = { version = "0.13", features = ["allow-unsafe-code"], optional = true }
windows = { version = "0.58", optional = true }
egui = { version = "0.27", optional = true }
eframe = { version = "0.27", optional = true }
tray-icon = { version = "0.24", optional = true }
image = { version = "0.25", optional = true }
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
open = "5"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code", "randr"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[features]
default = ["player-mpv", "gui"]
player-mpv = ["mpv"]
gui = ["egui", "eframe"]
tray = ["tray-icon"]
static-wallpaper = ["image"]
full = ["player-mpv", "gui", "tray", "static-wallpaper"]

[package.metadata.deb]
maintainer = "Nagi Contributors"
copyright = "2024, Nagi Contributors"
license-file = ["LICENSE", "0"]
extended-description = "Lightning-fast video wallpaper daemon. Rust rewrite of hidamari."
depends = "$auto, libmpv2"
section = "multimedia"
priority = "optional"
assets = [
    ["target/release/nagi", "usr/bin/", "755"],
    ["packaging/linux/nagi.desktop", "usr/share/applications/", "644"],
    ["packaging/linux/nagi.service", "lib/systemd/user/", "644"],
]
